--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,5 @@
-# SECURITY WARNING: don't run with the debug turned on in production!
-DEBUG=True
+# Environment name (development or production)
+ENVIRONMENT=name
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY=secret
+SECRET_KEY=secret_key
