--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,12 @@
 # Environment name (development or production)
 ENVIRONMENT=name
 
+# Django Settings
+
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY=secret_key
+
+# PRODUCTION ONLY
+
+# Allowed hosts separated by ',' (eg. 127.0.0.1,localhost)
+ALLOWED_HOSTS=127.0.0.1,localhost
