Updated .env sample files.

--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -1,5 +1,6 @@
 # Sample for .env file for development
 
 ENVIRONMENT=development
-SECRET_KEY=secret_key
+ALLOWED_HOSTS=*
+SECRET_KEY=generated_secret_key
 
