--- a/.env.prod.sample
+++ b/.env.prod.sample
@@ -1,6 +1,5 @@
 # Sample for .env file for development
 
 ENVIRONMENT=production
-SECRET_KEY=secret_key
-# Allowed hosts separated by ',' (e.g. 127.0.0.1, localhost)
-ALLOWED_HOSTS=allowed_hosts
+SECRET_KEY=generated_secret_key
+ALLOWED_HOSTS=www.example.com,www.mywebsite.com
