--- a/.env.prod.sample
+++ b/.env.prod.sample
@@ -1,4 +1,4 @@
-# Sample for .env file for development
+# Sample for .env file for production
 
 ENVIRONMENT=production
 SECRET_KEY=generated_secret_key
