--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --ds=project.settings.test
+addopts = --ds=project.settings.test --reuse-db -p no:warnings
 python_files = tests.py test_*.py *_tests.py
-pythonpath = . src # pytest src/
+pythonpath = ./src # path to django project (contains manage.py)
