--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ todo.txt
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-migrations/
+migrations/*
+!migrations/__init__.py
 staticfiles/
 media/
 
