--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ todo.txt
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-migrations/*
-!migrations/__init__.py
+**/migrations/**
+!**/migrations/__init__.py
 staticfiles/
 media/
 
