--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,3 @@
 [pytest]
-addopts = --ds=project.settings.test --reuse-db -p no:warnings
+addopts = --ds=config.settings.test --reuse-db -p no:warnings
 python_files = tests.py test_*.py *_tests.py
-pythonpath = ./src # path to django project (contains manage.py)
