--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -1,10 +1,3 @@
-# Django secret key
-DJANGO_SECRET_KEY=
-
-# Database URL
-# SQLite:       sqlite:////path/to/file/ (e.g sqlite:///db.sqlite3)
-# PostgreSQL:   postgres://user:password@hostname_or_ip:port/database_name
-DATABASE_URL=
-
-# Email backend (e.g. django.core.mail.backends.console.EmailBackend)
-DJANGO_EMAIL_BACKEND=
+DJANGO_SECRET_KEY='!!!PASTE_GENERATED_SECRET_KEY!!!'
+DJANGO_EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+DATABASE_URL=postgres://user:password@hostname_or_ip:port/database_name
