--- a/.env.prod.sample
+++ b/.env.prod.sample
@@ -1,7 +1,7 @@
 # GENERAL
 # ------------------------------------------------------------------------------
 DJANGO_SECRET_KEY='!!!PASTE_GENERATED_SECRET_KEY!!!'
-ALLOWED_HOSTS=example.com,.example.com
+DJANGO_ALLOWED_HOSTS=example.com,.example.com
 
 # DATABASE
 # ------------------------------------------------------------------------------
